# ChessHacks2025Training

./: .env.local  .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
checkpoints_sf1519_sfmetric/: metrics.json
config/: engine.yaml  selfplay.yaml  training.yaml
config/tracks/: blitz.yaml  rapid.yaml
docs/: ARCHITECTURE.md  CHESSHACKS_COMPLIANCE.md  CONTRIBUTING.md  ENGINE_API.md  TRAINING_PIPELINE.md
engine/: CMakeLists.txt
engine/include/: board.hpp  move.hpp  movegen.hpp  nn_infer.hpp  repetition.hpp  search.hpp  time_manager.hpp  uci.hpp
engine/src/: board.cpp  main.cpp  move.cpp  movegen.cpp  nn_infer.cpp  repetition.cpp  search.cpp  time_manager.cpp  uci.cpp
engine/tests/: legality_tests.cpp  legality_tests.py  perft_tests.cpp  search_tests.cpp
my-chesshacks-bot/: .env.template  package.json
my-chesshacks-bot/src/: main.py
selfplay/scripts/: arena_matches.py  generate_opening_book.py  run_selfplay.py  sample_to_rl_buffer.py
tools/: compare_nets.py  fen_sanity.py  visualize_planes.py
tools/profiling/: benchmark_engine.cpp  profile_inference.py
training/: README.md
training/data/: README.md
training/datasets/: __init__.py  pgn_dataset.py  selfplay_dataset.py  sf_supervised_dataset.py
training/models/: __init__.py  resnet_policy_value.py  tiny_value_net.py
training/scripts/: evaluate_model.py  export_weights_npz.py  export_weights_txt.py  pgn_to_dataset.py  testmodel.py  train_from_sf_npz.py  train_rl.py  train_supervised.py  train_supervised_version2.py
training/training/: inspect_sf_npz.py
training/utils/: 4_25am_dataset_creation_for_grayscale_elo  __init__.py  checkpoint.py  config.py  dataset_creation.py  dataset_creation2.py  dataset_creation3.py  fen_encoding.py  logging_utils.py  move_encoding.py  stockfish_eval.py  test_npz.py  util.helpers.py
training/whiteNoise/: data_gen.py  sanity.py  train.py
training/whiteNoise/processed/: shard_00001.npz
training/whiteNoise/training/whiteNoise/processed/: shard_00001.npz  shard_00002.npz  shard_00003.npz  shard_00004.npz  shard_00005.npz
weights/: README.md  get_weights.py
